--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
@@ -1,1 +1,58 @@
-﻿
+﻿.landing-page-container{
+    width: 100%;
+    height: 100%;
+}
+
+.landing-page-body{
+    margin-left: 120px;
+    margin-top: 50px;
+    margin-right: 20px;
+}
+
+#project-name {
+    font-family: 'Exo-2', sans-serif;
+    font-weight: 100;  
+}
+
+#project-options {
+    font-family: 'Exo-2', sans-serif;
+    font-weight: 100;
+    margin-top: 50px;
+    font-size: 24px;
+}
+
+.page-body-1{
+    margin-top: 40px;
+    margin-right: 50px;
+}
+
+hr {
+    width: 60%;
+    height: 1px;
+    background-color: darkgray;
+}
+
+.card-holder {
+   
+}
+
+.card {
+    height: 45%;
+    width: 45%;
+    min-height: 220px;
+    min-width: 220px;
+    margin-left: 60px;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.li{
+    margin-bottom: 15px;
+    font-size: 14px;
+}
+
+.project-details{
+    margin-top: 30px;
+}
