--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/admin/AdminPanel.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/admin/AdminPanel.css
@@ -22,6 +22,11 @@
     flex-wrap: wrap;
 }
 
+#opt {
+    background-color: rgb(139, 90, 180);
+    margin-right: 10%;
+}
+
 #admin-delete{
     color:red;
 
@@ -34,7 +39,7 @@
     height: 30%;
     width: 25%;
     margin-right: 50px;
-    margin-top: 10px; 
+    margin-top: 10px;
 }
 
 .project-paper{
