--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/concept/Concept.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/concept/Concept.css
@@ -4,6 +4,12 @@
     width: 100%;
 }
 
+#opt{
+    background-color: rgb(139, 90, 180);
+    margin-top: 2%;
+    margin-right: 3%;
+}
+
 .concept-container{
     width: 100%;
     overflow-y: scroll;
