--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/concept/Concept.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/concept/Concept.css
@@ -46,7 +46,7 @@
 .concept-name-holder{
     display: flex;
     width: 100%;
-    height: 4vh;
+    height: 7vh;
 }
 
 #project-description-holder{
@@ -115,6 +115,12 @@
 
 #r-and-d-col{
     margin-top: 4%;
+}
+
+#concept-name-field{
+    height: 90px;
+    width: 400vw;
+    max-width: 425px;
 }
 
 #full-concept-field{
