--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/surveyQuestion/SurveyQuestion.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/surveyQuestion/SurveyQuestion.css
@@ -136,6 +136,11 @@
     margin-top: 1vh;
 }
 
+.question-space{
+    margin-bottom: 1vh;
+}
+
+
 #projectLink-input{
     height: 20px;
     width: 400px;
