userend survey question types

--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyView/SurveyView.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyView/SurveyView.css
@@ -22,7 +22,11 @@
 }
 
 .rating-div{
-  max-width: 330px;
+  max-width: 364px;
+}
+
+.checktest{
+  text-align: justify;
 }
 
 .project-creator-header{
