--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyView/SurveyView.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyView/SurveyView.css
@@ -29,6 +29,11 @@
   text-align: justify;
 }
 
+#text-field{
+    width: 200vw;
+    max-width: 425px;
+}
+
 .project-creator-header{
     flex-direction: row;
     margin-left: 5%;
@@ -117,6 +122,12 @@
     width: 90%;
     height: 45vh;
 
+}
+
+#hr-3 {
+    width: 70%;
+    height: 0.5px;
+    background-color: lightgray;
 }
 
 #concept-container{
