fixed background issue on landingPage

--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
@@ -1,7 +1,23 @@
 ﻿.landing-page-container {
     width: 100%;
     height: 100%;
+    
+}
+
+#root{
+    height: 100%;
+}
+
+#page-holder {
+    height: 100%;
+}
+
+
+
+.app-routes {
+    height: 100%;
     background-color: #ebf2f2;
+
 }
 
 .landing-page-body{
@@ -130,4 +146,9 @@ ul {
 
 .project-details{
     margin-top: 30px;
+}
+
+html, body {
+    height: 100%;
+    
 }
