--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/conceptView/ConceptView.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/conceptView/ConceptView.css
@@ -1,3 +1,15 @@
+
+
+#concept-container {
+    width: 80%;
+}
+
+#concept-main-content {
+    width: 80%;
+    margin-left: 22%;
+    margin-top: 3%;
+}
+
 .dashboard-container {
     display: flex;
     flex-direction: column;
