--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectresearch/ProjectResearch.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectresearch/ProjectResearch.css
@@ -1,3 +1,14 @@
+
+#research-container{
+    width:80%;
+}
+
+#research-main-content {
+    width: 80%;
+    margin-left: 27%;
+    margin-top: 3%;
+}
+
 .project-creator-container {
     display: flex;
     flex-direction: column;
@@ -6,10 +17,10 @@
 
 .blue-card-container {
     width: 100%;
-    overflow-y: scroll;
     height: 89vh;
     max-height: 89vh;
     padding-bottom: 1vh;
+   
 }
 
 .project-creator-header {
