--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/projectLandingPage/projectLandingPage.css
@@ -1,4 +1,15 @@
-﻿.landing-page-container {
+﻿#subnav{
+    color: black;
+    margin-left: 13px;
+    margin-bottom: 6px;
+}
+
+    #subnav:hover {
+        color: #0283C4;
+        
+    }
+
+.landing-page-container {
     width: 100%;
     height: 100%;
     
