--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/navigationS/NavMenuS.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/navigationS/NavMenuS.css
@@ -2,7 +2,7 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
-  
+
 }
 .navbar-expand-sm {
   background-color: #FFFFFF;
@@ -30,7 +30,7 @@ margin-left: 60px;
 color: lightskyblue;
 max-width: 25px;
 }
-#naviboi{
+#naviboi-2{
 width: 100%;
 display: flex;
 flex-direction: row;
@@ -42,7 +42,7 @@ background: linear-gradient(135deg, rgba(30,87,153,1) 0%,rgba(41,137,216,1) 24%,
 background-clip: content-box;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
-} 
+}
 
 #name-span {
   border-radius: 25px; /* or 50% */
@@ -55,5 +55,5 @@ background-clip: content-box;
 }
 
 #title-image {
-  
+
 }
