file-saver install, survey taker view extension

--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyLandingPage/SurveyLandingPage.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/surveyend/components/surveyLandingPage/SurveyLandingPage.css
@@ -6,5 +6,11 @@
 
 #submit-survey{
   height: 40px;
-  width: 100px;
+  margin-left: 10px;
+  width: 175px;
+}
+
+.ToggleButton{
+  width: 50px;
+  border-color: black;
 }
