--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/Surveys/surveyAnalytics/SurveyAnalytics.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/Surveys/surveyAnalytics/SurveyAnalytics.css
@@ -42,5 +42,10 @@
 }
 
 #question-container {
-  margin-left: 50px
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#push-container {
+  margin-left: 40px;
 }
