--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/Surveys/surveyAnalytics/SurveyAnalytics.css
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/src/components/main/components/Surveys/surveyAnalytics/SurveyAnalytics.css
@@ -46,6 +46,11 @@
   margin-right: 30px;
 }
 
+#answer-container {
+  margin-left: 15px;
+  margin-right: 30px;
+}
+
 #push-container {
   margin-left: 40px;
 }
